# S-KVM

./: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml
Documentation/: Software KVM Switch: Comprehensive Design Document.md
crates/audio/: Cargo.toml
crates/audio/src/: capture.rs  codec.rs  lib.rs  playback.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  settings.rs
crates/config/tests/: config_tests.rs
crates/core/: Cargo.toml
crates/core/src/: clipboard.rs  display.rs  events.rs  lib.rs  platform.rs  protocol.rs  types.rs
crates/core/tests/: proptest_tests.rs  protocol_tests.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: coordinator.rs  lib.rs  main.rs
crates/daemon/src/actors/: clipboard_actor.rs  input_actor.rs  mod.rs  network_actor.rs
crates/daemon/src/ipc/: mod.rs
crates/daemon/tests/: e2e_loopback.rs  integration.rs
crates/fido2/: Cargo.toml
crates/fido2/src/: lib.rs  relay.rs  virtual_device.rs
crates/input/: Cargo.toml
crates/input/src/: capture.rs  edge.rs  injection.rs  lib.rs
crates/input/src/capture/: linux.rs  mod.rs  windows.rs
crates/input/src/injection/: linux.rs  mod.rs  windows.rs
crates/network/: Cargo.toml
crates/network/src/: discovery.rs  lib.rs  peer_manager.rs  quic.rs  tls.rs
crates/network/tests/: e2e_peer_test.rs  quic_integration.rs  tls_tests.rs
crates/scripting/: Cargo.toml
crates/scripting/src/: engine.rs  lib.rs  manager.rs
crates/video/: Cargo.toml
crates/video/src/: capture.rs  decode.rs  encode.rs  lib.rs  types.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  daemon_client.rs  lib.rs  main.rs  state.rs
src/components/: Dashboard.tsx  MonitorLayout.tsx  PeerList.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
src/hooks/: useConfig.ts  usePeers.ts  useTauriCommands.ts  useTauriEvents.ts
src/mocks/: tauriMock.ts
src/styles/: global.css
src/types/: index.ts
