[package]
name = "s-kvm-app"
version.workspace = true
edition.workspace = true

[lib]
name = "s_kvm_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "s-kvm-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
s-kvm-core = { workspace = true }
s-kvm-config = { workspace = true }
s-kvm-input = { workspace = true }
s-kvm-network = { workspace = true }
s-kvm-video = { workspace = true }
s-kvm-audio = { workspace = true }
s-kvm-fido2 = { workspace = true }
s-kvm-scripting = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
