[package]
name = "s-kvm-audio"
version.workspace = true
edition.workspace = true

[dependencies]
s-kvm-core = { workspace = true }
cpal = { workspace = true }
opus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
ringbuf = "0.4"

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
