[package]
name = "s-kvm-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
arboard = "3"
tokio = { workspace = true }
hostname = "0.4"

[dev-dependencies]
proptest = { workspace = true }
