[package]
name = "s-kvm-fido2"
version.workspace = true
edition.workspace = true

[dependencies]
s-kvm-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
uhid-virt = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
