[package]
name = "s-kvm-input"
version.workspace = true
edition.workspace = true

[dependencies]
s-kvm-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
] }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
