[package]
name = "s-kvm-network"
version.workspace = true
edition.workspace = true

[dependencies]
s-kvm-core = { workspace = true }
s-kvm-config = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
mdns-sd = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
