[package]
name = "s-kvm-scripting"
version.workspace = true
edition.workspace = true

[dependencies]
s-kvm-core = { workspace = true }
rhai = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
