[package]
name = "s-kvm-video"
version.workspace = true
edition.workspace = true

[features]
default = []
ffmpeg = ["dep:ffmpeg-next"]
scrap-capture = ["dep:scrap"]

[dependencies]
s-kvm-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
ffmpeg-next = { workspace = true, optional = true }
scrap = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
